--- a/requirements.txt
+++ b/requirements.txt
@@ -6,32 +6,65 @@
 #
 asgiref==3.7.2
     # via django
+certifi==2023.7.22
+    # via requests
+cffi==1.15.1
+    # via cryptography
 cfgv==3.4.0
     # via pre-commit
+charset-normalizer==3.2.0
+    # via requests
+cryptography==41.0.3
+    # via pyjwt
+defusedxml==0.7.1
+    # via python3-openid
 distlib==0.3.7
     # via virtualenv
 django==4.2.4
     # via
     #   -r .\requirements.in
+    #   django-allauth
     #   django-taggit
+django-allauth==0.55.0
+    # via -r .\requirements.in
 django-taggit==4.0.0
     # via -r .\requirements.in
 filelock==3.12.2
     # via virtualenv
 identify==2.5.27
     # via pre-commit
+idna==3.4
+    # via requests
+markdown==3.4.4
+    # via -r .\requirements.in
 nodeenv==1.8.0
     # via pre-commit
+oauthlib==3.2.2
+    # via requests-oauthlib
 platformdirs==3.10.0
     # via virtualenv
 pre-commit==3.3.3
     # via -r .\requirements.in
+pycparser==2.21
+    # via cffi
+pyjwt[crypto]==2.8.0
+    # via django-allauth
+python3-openid==3.2.0
+    # via django-allauth
 pyyaml==6.0.1
     # via pre-commit
+requests==2.31.0
+    # via
+    #   django-allauth
+    #   requests-oauthlib
+requests-oauthlib==1.3.1
+    # via django-allauth
 sqlparse==0.4.4
     # via django
 tzdata==2023.3
     # via django
+urllib3==2.0.4
+    # via requests
 virtualenv==20.24.3
     # via pre-commit
 
