--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,10 @@ platformdirs==3.10.0
     # via virtualenv
 pre-commit==3.3.3
     # via -r .\requirements.in
+psycopg[binary]==3.1.10
+    # via -r .\requirements.in
+psycopg-binary==3.1.10
+    # via psycopg
 pycparser==2.21
     # via cffi
 pyjwt[crypto]==2.8.0
@@ -61,8 +65,12 @@ requests-oauthlib==1.3.1
     # via django-allauth
 sqlparse==0.4.4
     # via django
+typing-extensions==4.7.1
+    # via psycopg
 tzdata==2023.3
-    # via django
+    # via
+    #   django
+    #   psycopg
 urllib3==2.0.4
     # via requests
 virtualenv==20.24.3
